fixed screen width issue on mobile... I think

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,8 +8,16 @@
   --header-height: 120px;
 }
 
-body {
+html {
+  height: fit-content;
+  overflow-y: visible;
+  min-height: 100vh;
+}
+
+body, html {
   overflow-x: hidden;
+  min-height: 100vh;
+  /* width: 100vw; */
 }
 
 main {
